# micro-model-3

./: .gitignore  CMakeLists.txt  Makefile  PROGRAM  README.md  fonts.cpp  fonts.h  ili9341.c  ili9341.h  main.c  main.cpp  main.h  make_binary.py  make_roms.py  model3_rom.c  model3_rom.h  obstacle_run_cmd.c  splash.cpp  splash.h  trs80.cpp  trs80.h  z80config.h
src/micro-model-3/: ili9341.c  ili9341.h  lwipopts.h  main.cpp  main.h  settings.cpp  settings.h  trs80.cpp  trs80.h  webapp.cpp  webapp.h
src/resources/: Ever-Given.cmd  Galaxy-Invasion.cmd  Scarfman2.cmd  Sea-Dragon.cmd
src/screenshots/: .gitignore  README.md  export.py
src/tools/: PROGRAM  invert.py  make_binary.py  make_graphical_chars.py
src/web/: 404.html  index.shtml  screen.shtml
src/z80emu/: z80user.h
